--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,16 @@
 @font-face {
   font-family: "This Sucks";
-  src: url('../resources/This Sucks.ttf') format('truetype');
+  src: url('../../_fonts/This Sucks.ttf') format('truetype');
 }
+@font-face {
+  font-family: "GothicPixels";
+  src: url('../../_fonts/GothicPixels.ttf') format('truetype');
+}
+@font-face {
+  font-family: "jupiterc";
+  src: url('../../_fonts/jupiterc.ttf') format('truetype');
+}
+
 * {
   margin:0;
   padding:0;
@@ -27,7 +36,7 @@ a {
   text-decoration: none;
 }
 
-/*=====Grid Page Layout=====*/
+/*===== Grid Page Layout =====*/
 .layout {
   display: grid;
   grid: "sidebar mainsection" 1fr / 1fr 9fr;
@@ -80,30 +89,7 @@ a {
   transition:.2s all; 
 }
 
-/*===== DEITY STATBLOCK =====*/
-.maincontainer {
-  display: block;
-  height: 700px;
-  padding: 1em;
-}
-
-.statblock {
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr;
-  margin: 1em;
-  padding: 1em;
-  border: 2px dotted #C91F37;
-  
-}
-
-.statblock li {
-  display: flex;
-  position: relative;
-  padding: 4em;
-}
-
-/*===== Main Section Loading Animation =====*/
+/*===== HEADER TEXT ANIMATION =====*/
 .titlebox {
   position: relative;
   padding: 1rem;
@@ -129,13 +115,49 @@ a {
   to { border-color: rgb(47, 235, 0)}
 }
 
-/*===== Footer List =====*/
+/*===== DEITY STATBLOCK =====*/
+.maincontainer {
+  display: block;
+  height: 700px;
+  padding: 1em;
+}
+
+.statblock {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1em;
+  margin: 1em;
+  padding: 0em;
+  border: 2px dotted #C91F37;
+  align-content: center;
+}
+
+.statblock li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-family: "This Sucks";
+  font-size: 2em;
+  width: 100%;
+  height: 5em;
+  padding-left: 2em;
+
+}
+
+.statblock p {
+  display: block;
+  font-family: "GothicPixels";
+  font-size: 1.3em;
+}
+
+/*===== FOOTER UL =====*/
 
 .infolist li {
   padding-bottom: 1em;
 }
 
-/*===============CRT Screen Effect================*/
+/*===== CRT SCREEN EFFECT =====*/
 @keyframes flicker {
   0% {
     opacity: 0.27861;
