--- a/css/style.css
+++ b/css/style.css
@@ -125,9 +125,9 @@ a {
 .statblock {
   display: grid;
   grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 45% 1fr;
   margin: 1em;
-  padding: 0em;
+  padding: 2em;
   border: 2px dotted #C91F37;
   align-content: center;
 }
@@ -135,13 +135,10 @@ a {
 .statblock li {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
   font-family: "This Sucks";
-  font-size: 2em;
+  font-size: 1.5em;
   width: 100%;
-  height: 5em;
-  padding-left: 2em;
-
+  padding: 2em;
 }
 
 .statblock p {
