--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "This Sucks";
-  src: url('../../_fonts/This Sucks.ttf') format('truetype');
+  font-family: "withered";
+  src: url('../resources/fonts/withered/withered.ttf') format('truetype');
 }
 @font-face {
   font-family: "GothicPixels";
@@ -17,15 +17,16 @@
 }
 
 body {
-  font-family: "This Sucks";
+  font-family: "withered";
   background-color: #292F2E;
-  color: #86DC27;
-  min-height: 100%;
+  color: #b2be3e;
+  width: 100vw;
+  height: 100vh;
 }
 
-footer {
+/*footer {
   padding-left: 2.3em;
-}
+}*/
 
 ul {
   list-style: none;
@@ -38,33 +39,80 @@ a {
 
 /*===== Grid Page Layout =====*/
 .layout {
-  display: grid;
-  grid: "sidebar mainsection" 1fr / 1fr 9fr;
-  gap: 1.5em;
-  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  border:2px dotted #C91F37;
+  justify-content: center;
+  align-items: center;
 }
 
-.sidebar { /* Menu Bar - Left */
-  grid-area: "sidebar";
-  height: fit-content;
+/*===== HEADER TEXT ANIMATION =====*/
+.titlebox {
+  position: relative;
+  padding: 3rem;
+  height: 20%;
+  width: 50%;
   border:2px dotted #C91F37;
 }
-
-.mainsection {
-  grid-area: "mainsection";
-  height: fit-content;
-  border: 2px dotted #C91F37;
+.titlebox h1 {
+  overflow: hidden;
+    border-right: .15em solid rgb(51, 255, 0);
+    white-space: nowrap;
+    font-size: 3rem;
+    width: 0;
+    animation: 
+      typing 2.5s steps(20, end) forwards,
+      blink 1s infinite;
 }
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+@keyframes blink {
+  from { border-color: transparent }
+  to { border-color: rgb(47, 235, 0)}
+}
+
+
+
+/*===== DEITY STATBLOCK =====*/
+
+.statblock {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 45% 1fr;
+  margin: 1em;
+  padding: 2em;
+  width: 100%;
+  border: 2px dotted #C91F37;
+  align-content: center;
+}
+
+.statblock li {
+  display: flex;
+  justify-content: flex-start;
+  font-family: "withered";
+  font-size: 3em;
+  width: 100%;
+  padding: 1em;
+}
+
+.statblock p {
+  display: block;
+  font-family: "GothicPixels";
+  font-size: 1.3em;
+}
+
 
 /*===== Nav Menu =====*/
 .menubox {
   display: flex;
-  flex-direction: column;
+  flex-direction: columns;
   position: relative;
-  justify-content: space-around;
-  padding: 1em;
-  width: 10em;
-  height: 700px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   min-height: auto;
 }
 
@@ -89,63 +137,7 @@ a {
   transition:.2s all; 
 }
 
-/*===== HEADER TEXT ANIMATION =====*/
-.titlebox {
-  position: relative;
-  padding: 1rem;
-  height: min-content;
-  width: min-content;
-}
-.titlebox h1 {
-  overflow: hidden;
-    border-right: .15em solid rgb(51, 255, 0);
-    white-space: nowrap;
-    font-size: 1.6rem;
-    width: 0;
-    animation: 
-      typing 2.5s steps(20, end) forwards,
-      blink 1s infinite;
-}
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
-}
-@keyframes blink {
-  from { border-color: transparent }
-  to { border-color: rgb(47, 235, 0)}
-}
 
-/*===== DEITY STATBLOCK =====*/
-.maincontainer {
-  display: block;
-  height: 700px;
-  padding: 1em;
-}
-
-.statblock {
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 45% 1fr;
-  margin: 1em;
-  padding: 2em;
-  border: 2px dotted #C91F37;
-  align-content: center;
-}
-
-.statblock li {
-  display: flex;
-  justify-content: flex-start;
-  font-family: "This Sucks";
-  font-size: 1.5em;
-  width: 100%;
-  padding: 2em;
-}
-
-.statblock p {
-  display: block;
-  font-family: "GothicPixels";
-  font-size: 1.3em;
-}
 
 /*===== FOOTER UL =====*/
 
@@ -153,7 +145,7 @@ a {
   padding-bottom: 1em;
 }
 
-/*===== CRT SCREEN EFFECT =====*/
+/*===== CRT SCREEN EFFECT 
 @keyframes flicker {
   0% {
     opacity: 0.27861;
@@ -246,4 +238,4 @@ a {
   z-index: 2;
   background-size: 100% 2px, 3px 100%;
   pointer-events: none;
-}
+}=====*/
